--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@
     left: 0;
     width: 0;
     height: 3px; /* Adjust the thickness of the underline */
-    background-color: white; /* Adjust to your desired line color */
+    background-color: black; /* Adjust to your desired line color */
     transition: width 0.3s ease; /* Smooth transition for animation */
 }
 
