--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -32,3 +32,14 @@
   src: url('/public/font/Britanica Black.ttf');
 }
 
+input:-webkit-autofill {
+    background-color: transparent !important; /* Makes the background transparent */
+    -webkit-box-shadow: 0 0 0 30px #F7CE55 inset !important; /* Matches your field's background color */
+    -webkit-text-fill-color: #C06100 !important; /* Ensures text color is visible */
+}
+
+input:-webkit-autofill:focus {
+    background-color: transparent !important; /* Ensures styling persists on focus */
+    -webkit-box-shadow: 0 0 0 30px #F7CE55 inset !important;
+    -webkit-text-fill-color: #C06100 !important;
+}
