--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,12 +4,12 @@
 
 @font-face {
   font-family: 'Mnbook';
-  src: url('/public/font/fonnts.com-Maison_Neue_Book.ttf');
+  src: url('/public/font/Maison_Neue_Book.ttf');
 }
 
 @font-face {
   font-family: 'Mnbold';
-  src: url('/public/font/fonnts.com-Maison_Neue_Bold.ttf');
+  src: url('/public/font/Maison_Neue_Bold.ttf');
 }
 
 @font-face {
