--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -44,3 +44,12 @@ input:-webkit-autofill:focus {
     -webkit-box-shadow: 0 0 0 30px #F7CE55 inset !important;
     -webkit-text-fill-color: #C06100 !important;
 }
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.animate-spin {
+    animation: spin 1s linear infinite;
+}
